--- a/docs/foundation/image.mdx
+++ b/docs/foundation/image.mdx
@@ -24,7 +24,7 @@ _As imagens têm a função de traduzir visualmente ideias específicas ou mensa
 - Utilize imagens quando o conteúdo puder se beneficiar de um exemplo de apoio para esclarecer as informações.
 
 :::note
-Para a utilização de ícones e logotipo, consulte as documentações específicas para esses elementos.
+Para a utilização de [ícones](/docs/foundation/icon) e [logo](/docs/foundation/logo), consulte as documentações específicas para esses elementos.
 :::
 
 ### Quando não usar?
