wip design tokens
inclusão componente de cores para teste

--- a/docs/design-tokens.mdx
+++ b/docs/design-tokens.mdx
@@ -2,6 +2,9 @@
 id: designtokens
 ---
 
+import ColorsComponent from './../src/components/Colors.js'
+
+
 # Design Tokens
 
 ## Intro
@@ -49,6 +52,11 @@ Espaçamentos usados para estruturar os componentes, assim como criar ritmo vert
 
 
 ___
+
+## Colors
+
+<ColorsComponent />
+
 
 ## Tipography
 
