--- a/docs/components/designtokens/design-tokens.mdx
+++ b/docs/components/designtokens/design-tokens.mdx
@@ -1,8 +1,10 @@
 ---
 id: designtokens
+sidebar_label: Intro
+sidebar_position: 1
 ---
 
-import ColorsComponent from './../src/components/Colors.js'
+import ColorsComponent from './../../../src/components/Colors.js'
 
 
 # Design Tokens
