style: paginas tokens
divisão das paginas de tokens

--- a/docs/designtokens/design-tokens.mdx
+++ b/docs/designtokens/design-tokens.mdx
@@ -1,10 +1,8 @@
 ---
-id: tokenscores
-sidebar_label: Cores
-sidebar_position: 2
+id: designtokens
+sidebar_label: Intro
+sidebar_position: 1
 ---
-
-import ColorsComponent from './../../../src/components/Colors.js'
 
 
 # Design Tokens
@@ -21,4 +19,19 @@ Estão sempre espelhados entre design e tecnologia.
 As ferramentas de design voltadas para interface utilizam pixel como unidade. Mas no desenvolvimento é importante considerar as medidas relativas (rem), pois valores fixos podem prejudicar a acessibilidade.
 :::
 
-### Global token e brand token
+
+## Global token
+São os tokens comuns, compartilhados entre todas as marcas que utilizam o Design System.
+
+- Typography (parcialmente)
+- Spacing
+- Border
+- Shadow
+- Colors (Feedback)
+
+
+## Brand token
+São os tokens específicos, que variam de uma marca para outra.
+
+- Typography (parcialmente)
+- Colors (Brand e Neutral)
