add tokens feedback colors
Inclusao tabela cores de feedback

--- a/docs/designtokens/design-tokens-color.mdx
+++ b/docs/designtokens/design-tokens-color.mdx
@@ -4,7 +4,7 @@ sidebar_label: Colors
 sidebar_position: 2
 ---
 
-import ColorsComponent from './../../src/components/Colors.js'
+import {ColorsComponentPositive, ColorsComponentNegative, ColorsComponentWarning, ColorsComponentInfo} from './../../src/components/ColorsFeedback.js'
 
 
 # Colors
@@ -13,13 +13,17 @@ import ColorsComponent from './../../src/components/Colors.js'
 
 ### Positive
 
-<ColorsComponent />
+<ColorsComponentPositive />
+
 
 ### Negative
+<ColorsComponentNegative />
 
 ### Warning
+<ColorsComponentWarning />
 
 ### Info
+<ColorsComponentInfo />
 
 ---
 
