add tokens brand

--- a/docs/designtokens/design-tokens-color.mdx
+++ b/docs/designtokens/design-tokens-color.mdx
@@ -5,9 +5,26 @@ sidebar_position: 2
 ---
 
 import {ColorsComponentPositive, ColorsComponentNegative, ColorsComponentWarning, ColorsComponentInfo} from './../../src/components/ColorsFeedback.js'
+import {ColorsComponentBrand01, ColorsComponentAction} from './../../src/components/ColorsBrand.js'
 
 
 # Colors
+
+## Brand Colors (Animalia)
+
+<ColorsComponentBrand01 />
+
+### Action Color
+<ColorsComponentAction />
+
+---
+## Neutral Colors
+
+### Light
+### Mid
+### Dark
+
+---
 
 ## Feedback Colors
 
@@ -26,14 +43,3 @@ import {ColorsComponentPositive, ColorsComponentNegative, ColorsComponentWarning
 <ColorsComponentInfo />
 
 ---
-
-## Brand Colors
-
-
----
-
-## Neutral Colors
-
-### Light
-### Mid
-### Dark
