add tokens neutral colors

--- a/docs/designtokens/design-tokens-color.mdx
+++ b/docs/designtokens/design-tokens-color.mdx
@@ -6,12 +6,12 @@ sidebar_position: 2
 
 import {ColorsComponentPositive, ColorsComponentNegative, ColorsComponentWarning, ColorsComponentInfo} from './../../src/components/ColorsFeedback.js'
 import {ColorsComponentBrand01, ColorsComponentAction} from './../../src/components/ColorsBrand.js'
+import {ColorsComponentNeutralLight, ColorsComponentNeutralMid, ColorsComponentNeutralDark} from './../../src/components/ColorsNeutral.js'
 
 
 # Colors
 
 ## Brand Colors (Animalia)
-
 <ColorsComponentBrand01 />
 
 ### Action Color
@@ -21,17 +21,20 @@ import {ColorsComponentBrand01, ColorsComponentAction} from './../../src/compone
 ## Neutral Colors
 
 ### Light
+<ColorsComponentNeutralLight />
+
 ### Mid
+<ColorsComponentNeutralMid />
+
 ### Dark
+<ColorsComponentNeutralDark/>
 
 ---
 
 ## Feedback Colors
 
 ### Positive
-
 <ColorsComponentPositive />
-
 
 ### Negative
 <ColorsComponentNegative />
@@ -41,5 +44,3 @@ import {ColorsComponentBrand01, ColorsComponentAction} from './../../src/compone
 
 ### Info
 <ColorsComponentInfo />
-
----
