add conteudo estilos

--- a/docs/foundation/typography.mdx
+++ b/docs/foundation/typography.mdx
@@ -14,7 +14,7 @@ import LetterSpacing from './img/typo/letter-spacing.svg';
 import FontSize from './img/typo/font-size-ds.svg';
 
 
-# Tipografia: Construção
+# Construção
 
 > 95% das informações na web está em linguagem escrita
 – _[Oliver Reichensteisn](https://ia.net/topics/the-web-is-all-about-typography-period)_
