text area: visao geral e anatomia

--- a/docs/components/textfield.mdx
+++ b/docs/components/textfield.mdx
@@ -98,7 +98,7 @@ O componente é estruturado e estilizado por meio dos design tokens. Os tokens q
 :::note
 A label é tratada como um componente à parte no Design System (`ani-label`). Você pode consultar suas variações e customizações na documentação específica desse componente.
 
-🔗 Label
+🔗 [Label](/docs/components/label)
 
 :::
 
