--- a/docs/components/textfield.mdx
+++ b/docs/components/textfield.mdx
@@ -22,7 +22,7 @@ import textfield_states from './img/textfield/textfield-states.png';
 import WebComponentReact from './../../src/components/WebComponent.js';
 
 
-# Textfield
+# Text field
 
 <Tabs
   defaultValue="design"
@@ -37,7 +37,7 @@ import WebComponentReact from './../../src/components/WebComponent.js';
 
 ## Visão geral
 
-O *text-field* é um componente de entrada de dados que possibilita à pessoa que está interagindo com a interface insira e edite informações. Esse tipo de campo possui uma única linha e é bastante comum em formulários.
+O *Text field* é um componente de entrada de dados que possibilita à pessoa que está interagindo com a interface insira e edite informações. Esse tipo de campo possui uma única linha e é bastante comum em formulários.
 
 ### Tipos
 
