fix: níveis topicos

--- a/docs/components/icon.mdx
+++ b/docs/components/icon.mdx
@@ -35,7 +35,8 @@ O componente icon é utilizado para dar suporte a compreensão de uma label, de 
 Nesta primeira onda do componente foi previsto o uso como apoio, decorativo.
 
 :::
-## Tamanhos
+
+### Tamanhos
 
 O componente possui três tamanhos diferentes: *Small,* *Medium* e *Large*. O tamanho medium é o tamanho padrão.
 
