--- a/docs/components/textarea.mdx
+++ b/docs/components/textarea.mdx
@@ -100,15 +100,15 @@ A label é tratada como um componente à parte no Design System (`ani-label`). V
 - Os elementos **label, help text** e **text error** acompanham e se limitam à largura do **text area** dentro do layout. Caso haja na label o indicativo de obrigatoriedade do campo (required text), esse elemento permanece ao lado do texto da label.
 
 
-### Boas práticas
+## Boas práticas
 
-#### Fazer
+### Fazer
 
 - O campo de entrada deve ter tamanho grande o suficiente para que a maioria do conteúdo inserido fique visível (ou permitir que o usuário ajuste o tamanho);
 - Mantenha a label do campo sempre visível, para permitir que o usuário identifique corretamente o campo, mesmo após conteúdo inserido;
 - Use label com textos autoexplicativos, com instruções claras e objetivas, para que o usuário identifique com facilidade qual informação precisa ser inserida
 
-#### Não Fazer
+### Não Fazer
 
 - Nunca use o placeholder para substituir a label do componente. Use o placeholder para trazer mais contexto sobre o tipo de informação que precisa ser adicionada.
 
