--- a/docs/components/toaster.mdx
+++ b/docs/components/toaster.mdx
@@ -122,7 +122,7 @@ O componente foi projetado para atender os requisitos das Diretrizes de Acessibi
 - Caso um toaster receba foco, mantenha-o aberto.
 
 
-## Acessibilidade tratada no componente
+### Acessibilidade tratada no componente
 
 - Permite interação via teclado ([WCAG 2.1.1: Keyboard](https://www.w3.org/WAI/WCAG21/Understanding/keyboard))
 - Os elementos interativos possuem área clicável de pelo menos 44px x 44px ([WCAG 2.5.5: Target Size](https://www.w3.org/WAI/WCAG21/Understanding/target-size))
