--- a/docs/components/tag.mdx
+++ b/docs/components/tag.mdx
@@ -29,15 +29,15 @@ Este componente é indicado para os casos em que é necessário informar, rotula
 As tags ajudam a destacar informações importantes e apoiam na categorização, também rotulam visualmente os itens com pequenas quantidades de informações ou destacam o status, geralmente com palavras-chave concisas que ajudam a identificar os itens. Podem ou não conter ícones para apoiar na identificação da tag.
 
 
-### Tipos
+## Tipos
 
 Pensando nos diversos cenários de uso, há duas categorias de tags: **leitura** e **interativa**.
 
 - **Tag de leitura:** traz a informação de forma estática, sem possibilitar qualquer tipo de interação;
-- **Tag interativa:** traz a informação e possui interação em si, podendo ser removida, por exemplo.
+- **Tag interativa:** traz a informação e possui interação em si, podendo ser removida.
 
 
-### Boas práticas
+## Boas práticas
 
 As tags (leitura e interativa) são estruturadas com base em padrões de usabilidade para contribuir com uma boa experiência. Por isso, ao aplicar esse componente, é muito importante que sejam levados em consideração alguns critérios e práticas:
 
