hide title navbar

--- a/i18n/pt/docusaurus-theme-classic/navbar.json
+++ b/i18n/pt/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "Animalia DS",
+    "message": "",
     "description": "The title in the navbar"
   },
   "item.label.Documentation": {
