--- a/docs/components/switch.mdx
+++ b/docs/components/switch.mdx
@@ -63,7 +63,7 @@ alt="Anatomia do switch disposto lado a lado, sendo 1 key, 2 track, 3 icon, 4 bo
 
 **6.** Outline (*focused*)
 
-O switch é estruturado e estilizado por meio dos design tokens. Os tokens que podem ser alterados pelas marcas estão listados na seção de [](https://www.notion.so/Switch-43aecb6a65004785b35db4005cedccb3)[propriedades customizáveis](https://www.notion.so/Switch-43aecb6a65004785b35db4005cedccb3).
+O switch é estruturado e estilizado por meio dos design tokens. Os tokens que podem ser alterados pelas marcas estão listados na seção de [propriedades customizáveis](#propriedades-customizáveis).
 
 
 ### Comportamento
