--- a/docs/components/radio.mdx
+++ b/docs/components/radio.mdx
@@ -68,7 +68,7 @@ O componente possui dois tamanhos diferentes: _Medium_ e _Large_. O tamanho medi
   alt="Duas variações de tamanho para o radio dispostas lado a lado"
 />
 
-Os componentes são formados por tokens, sendo estes propriedades de estilo que definem como será estruturado e estilizado. Os tokens que podem ser alterados pelas marcas, podem ser conferidos na seção de [propriedades customizáveis](https://www.notion.so/radio-b8870a364228481b8350567be1cc63d4).
+Os componentes são formados por tokens, sendo estes propriedades de estilo que definem como será estruturado e estilizado. Os tokens que podem ser alterados pelas marcas, podem ser conferidos na seção de [propriedades customizáveis](#propriedades-customizáveis).
 
 
 ## Boas práticas
