tooltip: correção conteudo
Removidos conteudos que o componente ainda não possui

--- a/docs/components/tag.mdx
+++ b/docs/components/tag.mdx
@@ -29,7 +29,7 @@ Este componente é indicado para os casos em que é necessário informar, rotula
 As tags ajudam a destacar informações importantes e apoiam na categorização, também rotulam visualmente os itens com pequenas quantidades de informações ou destacam o status, geralmente com palavras-chave concisas que ajudam a identificar os itens. Podem ou não conter ícones para apoiar na identificação da tag.
 
 
-## Tipos
+### Tipos
 
 Pensando nos diversos cenários de uso, há duas categorias de tags: **leitura** e **interativa**.
 
