item-list: correção Alt da img

--- a/docs/components/item-list.mdx
+++ b/docs/components/item-list.mdx
@@ -27,13 +27,20 @@ import itemlist_states from './img/itemlist/itemlist-states.png';
 
 O componente `item-list` é a menor parte da lista de ação que compõem o componente `listbox`.
 
+:::note Componentes relacionados
+
+- [Listbox](/docs/components/listbox)
+- [Dropdown](/docs/components/dropdown)
+
+:::
+
 ### Anatomia
 
 O `item-list` é composto pela *label*. Também contém partes que são específicas de estados de interação, como *background* no estado hover.
 
 <img
   src={itemlist_anatomy}
-  alt="Os estados de interação do item-list, com as respectivas versões normal, hover, focus, pressed, disabled."
+  alt="Item-list com as 3 partes sinalizadas"
 />
 
 **1.** Label
