doc(calendar): componente relacionado

--- a/docs/components/calendar.mdx
+++ b/docs/components/calendar.mdx
@@ -26,6 +26,10 @@ O componente `calendar` é usado para selecionar datas próximas ao tempo presen
 
 Normalmente mostram os dias da semana na parte superior e combinam com a metáfora de calendários de mesa ou de parede.
 
+:::note Componentes relacionados
+
+- [Datepicker](/docs/components/datepicker)
+:::
 
 ## Boas práticas
 
