radio group: wip

--- a/docs/components/radio.mdx
+++ b/docs/components/radio.mdx
@@ -38,6 +38,11 @@ import WebComponentReact from './../../src/components/WebComponent.js';
 
 O componente radio button é utilizado para escolher uma opção dentre outras, ou seja, apenas um item pode ser selecionado por vez. Quando um usuário seleciona um novo item, a escolha anterior é automaticamente desmarcada.
 
+:::note Componentes relacionados
+
+- [Radio Group](/docs/components/radiogroup)
+:::
+
 ### Anatomia
 
 O radio button é composto por _background_ e _border_. Também contém partes que são específicas de variação do componente ou estados de interação, como _shadow_ no estado hover.
