fix (checkbox): correção imagem dont1

--- a/docs/components/checkbox.mdx
+++ b/docs/components/checkbox.mdx
@@ -96,8 +96,9 @@ O componente foi projetado para atender os requisitos das Diretrizes de Acessibi
   doAlt="Checkbox com uma opção com texto mais longo, mas em linha única"
   doDescription="Manter o texto em linha única facilita a correlação entre a label e o seletor."
   dontImg={Dont1}
-  dontAlt="Checkbox com opções listadas uma embaixo da outra"
-  dontDescription="O texto em duas linhas torna os espaços entre as opções irregulares."
+  dontAlt="Checkbox com texto da primeira opção em duas linhas"
+  dontDescription="Evite textos longos. O texto em duas linhas torna os espaços entre as opções irregulares."
+  warning="true"
 />
 
 - Prefira a utilização do componente em uma lista vertical ao invés de horizontal, pois permite uma leitura mais fácil
