--- a/docs/components/combobox.mdx
+++ b/docs/components/combobox.mdx
@@ -22,7 +22,7 @@ import TabItem from '@theme/TabItem';
 
 ## Visão geral
 
-O combobox é a combinação entre uma entrada de texto com uma listagem de opções. É um componente utilizado quando a lista é longa e necessita de um recurso de filtragem das opções. Não permite a entrada de forma livre, ou seja, que a pessoa usuária selecione um valor diferente das opções pré-definidas.
+O `combobox` é a combinação entre uma entrada de texto com uma listagem de opções. É um componente utilizado quando a lista é longa e necessita de um recurso de filtragem das opções. Não permite a entrada de forma livre, ou seja, que a pessoa usuária selecione um valor diferente das opções pré-definidas.
 ### Quando usar
 
 - Utilize quando a lista de opções tiver 10 ou mais itens e for possível selecionar apenas uma opção.
