Doc(About): Inclusão de changelog e time

--- a/docs/about/team.mdx
+++ b/docs/about/team.mdx
@@ -11,10 +11,22 @@ import profileNic from './img/team/nic.jpeg';
 import profileDoug from './img/team/doug.jpeg';
 import profileAmilcar from './img/team/amilcar.jpeg';
 import profileEdi from './img/team/edi.jpeg';
+import profileCaio from './img/team/caio.jpeg';
+import profileBia from './img/team/bia.jpeg';
+import profileJe from './img/team/jeh.jpeg';
+import profileGabi from './img/team/gabi.jpeg';
+import profileRafa from './img/team/rafa.jpeg';
+import profileLuiz from './img/team/luiz-mariz.jpeg';
+
+import profilePeixe from './img/team/peixe.jpeg';
+import profileTais from './img/team/tais.jpeg';
+import profileMay from './img/team/may.jpeg';
+import profileVinicius from './img/team/vinicius.jpeg';
+import profileFran from './img/team/fran.jpeg';
 
 # Time do Animalia Design System
 
-Designers, desenvolvedores e pesquisadores.
+/_ Incluir texto de introducao _/
 
 <div style={{ display: 'flex', flexFlow: 'row wrap', margin: '-8px' }}>
   <ProfileCardComponent
@@ -25,7 +37,7 @@ Designers, desenvolvedores e pesquisadores.
   <ProfileCardComponent
     avatar={profileAmilcar}
     name="Amilcar Teixeira"
-    title="Senior Product Design"
+    title="Product Design"
   />
   <ProfileCardComponent
     avatar={profileEdi}
@@ -35,20 +47,69 @@ Designers, desenvolvedores e pesquisadores.
   <ProfileCardComponent
     avatar={profileNic}
     name="Nicole Oliveira"
-    title="Engenheira de software"
+    title="Software Engineer"
   />
   <ProfileCardComponent
-    avatar={profileTest}
-    name="Luiz Mariz "
-    title="Senior Front-end Developer"
+    avatar={profileGabi}
+    name="Gabrieli Barbosa"
+    title="Front-end Developer"
   />
   <ProfileCardComponent
-    avatar={profileTest}
-    name="Luiz Mariz "
-    title="Desenvolvedor"
+    avatar={profileRafa}
+    name="Rafael Lourenço"
+    title="Front-end Developer"
   />
+  <ProfileCardComponent
+    avatar={profileLuiz}
+    name="Luiz Mariz"
+    title="Front-end Developer"
+  />
+  <ProfileCardComponent
+    avatar={profileCaio}
+    name="Caio Mendonça"
+    title="UX Researcher"
+  /> <ProfileCardComponent
+    avatar={profileJe}
+    name="Jessica"
+    title="UX Researcher"
+  /> <ProfileCardComponent avatar={profileBia} name="Bia Ferrer" title="UX Researcher" />
 </div>
 
 ## Colaboração
 
-Designers, desenvolvedores e pesquisadores.
+Pessoas que contibruiram ao longo da jornada da criação do designer system e que fazem parte desta construção.
+
+<div
+  style={{
+    display: 'flex',
+    flexFlow: 'row wrap',
+    margin: '-8px',
+    filter: 'grayscale(100%)',
+  }}
+>
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profilePeixe}
+    alt="Henrique Peixe"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileTais}
+    alt="Tais Ertl"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileFran}
+    alt="Francini Martins"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileMay}
+    alt="Mayara Brandão"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileVinicius}
+    alt="Vinicius"
+  />
+</div>
